refactor(library): Port für die Originalablage der Uploads mit Dateisystem-Adapter
Die Upload-Ablage lag bisher an zwei Stellen offen: LibraryDocumentService baute
Pfade aus opaa.upload.storage-path zusammen (ablegen, löschen, ausliefern) und
StoredDocumentSourceAccess las sie für Reindex und Metadaten-Nachlauf wieder ein.
Beide führten je eine eigene Zugehörigkeitsprüfung — die eine lexikalisch, die
andere über toRealPath.

Beides liegt jetzt hinter UploadedOriginalStore (ADR-0030): annehmen,
festschreiben, freigeben, verwerfen, ausliefern, lokal lesen, löschen und die
eine Auflösung eines Locators. Der Dateisystem-Adapter ist die einzige Stelle,
die den Speicherpfad noch kennt; ausgewählt wird er über opaa.upload.store
(Standard filesystem, jeder andere Wert bricht den Start ab).

Die Auflösung folgt der strengeren Semantik (Zugehörigkeit, Symlink-Auflösung,
Existenz) — auf dem Upload-Auslieferweg ist das eine gewollte Verschärfung:
ein Symlink aus dem Upload-Verzeichnis heraus wird nicht mehr ausgeliefert.

Die Arbeitsdatei eines Uploads gehört ab der Übergabe dem asynchronen Auftrag;
processUploadedFileAsync gibt sie in einem finally auf jedem Ausgang frei.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VCi9M3bia2BMgjCgvkeBUB